add multipart training

--- a/notebooks/endovis/endo17/XMem_MultiPartTraining.ipynb
+++ b/notebooks/endovis/endo17/XMem_MultiPartTraining.ipynb
@@ -633,13 +633,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8 out of 8 videos accepted in ../../../data/endovis/endo17/data/frames/endo17_train_frames.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "8 out of 8 videos accepted in ../../../data/endovis/endo17/data/frames/endo17_train_frames.\n",
       "rgb torch.Size([8, 3, 384, 384])\n",
       "first_frame_gt (1, 5, 384, 384)\n",
       "cls_gt (8, 1, 384, 384)\n",
@@ -747,11 +741,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1:   0%|          | 1/10000 [00:00<00:00, 48770.98it/s]/home/nikhilhenry/projects/surgical_clean/SurgicalAI/external/XMem/model/trainer.py:72: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
+      "Epoch 1:   0%|          | 1/10000 [00:00<00:00, 47662.55it/s]/home/nikhilhenry/projects/surgical_clean/SurgicalAI/external/XMem/model/trainer.py:72: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.\n",
       "  with torch.cuda.amp.autocast(enabled=self.config['amp']):\n",
       "/home/nikhilhenry/projects/surgical_clean/SurgicalAI/.venv/lib/python3.11/site-packages/torch/optim/lr_scheduler.py:216: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
       "  warnings.warn(\n",
-      "Epoch 4:   0%|          | 4/10000 [00:21<15:15:47,  5.50s/it]"
+      "Epoch 17:   0%|          | 17/10000 [01:39<16:35:29,  5.98s/it]"
      ]
     },
     {
@@ -850,14 +844,6 @@
    "source": [
     "print(\"Training Completed\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24d98249-8fc4-43f1-9d31-39850162dec6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
